# yspace

./: .editorconfig  Cargo.toml  README.md
docs/: differences.md  whitespace_spec.md
src/: bit_pack.rs  main.rs  syntax.rs  tests.rs  token.rs
tests/: copy_error.ws  copy_negative.ws  copy_negative_unused.ws  copy_zero_empty.ws  copy_zero_empty_unused.ws  copy_zero_sign_only.ws  div_zero.ws  div_zero_unused.ws  encoding_invalid_utf8_lazy.ws  encoding_utf8_bom.ws  implicit_end.ws  leading_zero_labels.ws  long_number_54_bits.ws  mod_zero.ws  mod_zero_unused.ws  printc_all_codepoints.ws  printc_all_surrogates.ws  printc_negative.ws  printi_long_number_334_bits.ws  printi_negative_zero.ws  push_zero_sign_only.ws  readc_echo.ws  retrieve_negative.ws  retrieve_negative_unused.ws  retrieve_unset.ws  retrieve_unset_less.ws  retrieve_unset_unused.ws  slide_less.ws  slide_negative.ws  slide_zero_empty.ws  slide_zero_sign_only.ws  store_negative.ws  test.bash  undefined_label_jz.ws  underflow_copy.ws  underflow_copy_unused.ws  underflow_jn.ws  underflow_jz.ws  underflow_mul.ws  underflow_printc.ws  (+7 more)
